--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "kill-port": "npx kill-port 3000 & npx kill-port 3005"
+    "kill-port": "npx kill-port 3000 & npx kill-port 3005",
+    "dev-front": "npm --prefix ./client/ run dev",
+    "dev-server": "npm --prefix ./server/ run start",
+    "dev": "concurrently \"npm run dev-front\" \"npm run dev-server\""
   },
   "repository": {
     "type": "git",
@@ -17,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/JamesFincher/next-aws/issues"
   },
-  "homepage": "https://github.com/JamesFincher/next-aws#readme"
+  "homepage": "https://github.com/JamesFincher/next-aws#readme",
+  "dependencies": {
+    "concurrently": "^7.2.2",
+    "nodemon": "^2.0.18"
+  }
 }
